# solver_PBD

./: CMakeLists.txt  README.md  constraints.cpp  constraints.h  context.cpp  context.h  drawarea.cpp  drawarea.h  grid.h  mainwindow.cpp  mainwindow.ui  multithreading.cpp  multithreading.h  physicalbody.h  renderer.cpp  renderer.h  solver.cpp  solver.h  springlink.h
